tests/fsharp/typecheck/sigs/neg104.bsl

neg104.fs(14,16,14,17): parse error FS0010: Unexpected symbol '}' in expression

neg104.fs(17,18,17,19): parse error FS0010: Unexpected symbol '}' in expression. Expected 'with' or other token.

neg104.fs(20,23,20,24): parse error FS0010: Incomplete structured construct at or before this point in expression

neg104.fs(23,25,23,26): parse error FS0010: Incomplete structured construct at or before this point in expression

neg104.fs(26,28,26,29): parse error FS0010: Incomplete structured construct at or before this point in pattern

neg104.fs(29,31,29,32): parse error FS0010: Incomplete structured construct at or before this point in pattern matching

neg104.fs(33,14,33,20): parse error FS0010: Unexpected keyword 'match!' in expression

neg104.fs(32,27,32,28): parse error FS0604: Unmatched '{'

neg104.fs(35,19,35,20): parse error FS0010: Unexpected symbol '}' in definition. Expected incomplete structured construct at or before this point or other token.

neg104.fs(35,1,35,20): parse error FS0010: Incomplete structured construct at or before this point in implementation file
