tests/fsharp/typecheck/sigs/neg104.vsbsl

neg104.fs(14,16,14,17): parse error FS0010: Unexpected symbol '}' in expression

neg104.fs(17,18,17,19): parse error FS0010: Unexpected symbol '}' in expression. Expected 'with' or other token.

neg104.fs(20,23,20,24): parse error FS0010: Incomplete structured construct at or before this point in expression

neg104.fs(23,25,23,26): parse error FS0010: Incomplete structured construct at or before this point in expression

neg104.fs(26,28,26,29): parse error FS0010: Incomplete structured construct at or before this point in pattern

neg104.fs(29,31,29,32): parse error FS0010: Incomplete structured construct at or before this point in pattern matching

neg104.fs(33,14,33,20): parse error FS0010: Unexpected keyword 'match!' in expression

neg104.fs(32,27,32,28): parse error FS0604: Unmatched '{'

neg104.fs(35,19,35,20): parse error FS0010: Unexpected symbol '}' in definition. Expected incomplete structured construct at or before this point or other token.

neg104.fs(35,1,35,20): parse error FS0010: Incomplete structured construct at or before this point in implementation file

neg104.fs(8,9,8,30): typecheck error FS0750: This construct may only be used within computation expressions

neg104.fs(10,9,10,30): typecheck error FS0750: This construct may only be used within computation expressions

neg104.fs(20,9,20,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg104.fs(23,9,23,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg104.fs(26,9,26,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg104.fs(32,21,32,26): typecheck error FS0003: This value is not a function and cannot be applied.

neg104.fs(35,9,35,18): typecheck error FS0748: This construct may only be used within computation expressions. To return a value from an ordinary function simply write the expression without 'return'.
